// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds thread proxy views fetches ancestors 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "parent": Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": Array [],
          "viewer": Object {
            "followedBy": "record(2)",
            "following": "record(1)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(3)",
        "viewer": Object {
          "like": "record(7)",
        },
      },
      "replies": Array [],
    },
    "post": Object {
      "$type": "app.bsky.feed.defs#postView",
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(1)@jpeg",
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
        "labels": Array [
          Object {
            "cid": "cids(4)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label",
          },
        ],
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(3)",
      "embed": Object {
        "$type": "app.bsky.embed.images#view",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(3)/cids(5)@jpeg",
            "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(3)/cids(5)@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(3)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "record(4)",
          "val": "test-label",
        },
        Object {
          "cid": "cids(3)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "record(4)",
          "val": "test-label-2",
        },
      ],
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": Object {
                  "$link": "cids(5)",
                },
                "size": 4114,
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(2)",
            "uri": "record(3)",
          },
          "root": Object {
            "cid": "cids(2)",
            "uri": "record(3)",
          },
        },
        "text": "hear that label_me label_me_2",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(4)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
  "post": Object {
    "$type": "app.bsky.feed.defs#postView",
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "repost": "record(5)",
    },
  },
  "replies": Array [],
}
`;

exports[`pds thread proxy views fetches deep post thread 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "$type": "app.bsky.feed.defs#postView",
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(3)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(2)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
      "replies": Array [],
    },
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(1)@jpeg",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [
            Object {
              "cid": "cids(4)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "did:example:labeler",
              "uri": "record(7)",
              "val": "test-label",
            },
          ],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(4)/cids(5)@jpeg",
              "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(4)/cids(5)@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(5)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(6)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": Object {
            "$type": "app.bsky.feed.defs#postView",
            "author": Object {
              "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": Array [],
              "viewer": Object {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "cid": "cids(6)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "likeCount": 0,
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(3)",
                  "uri": "record(6)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "uri": "record(8)",
            "viewer": Object {
              "repost": "record(9)",
            },
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread proxy views fetches shallow post thread 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "$type": "app.bsky.feed.defs#postView",
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(3)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(2)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
    },
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(1)@jpeg",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [
            Object {
              "cid": "cids(4)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "did:example:labeler",
              "uri": "record(7)",
              "val": "test-label",
            },
          ],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(4)/cids(5)@jpeg",
              "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(4)/cids(5)@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(5)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(6)",
        "viewer": Object {},
      },
    },
  ],
}
`;

exports[`pds thread proxy views handles deleted posts correctly 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "$type": "app.bsky.feed.defs#postView",
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 1,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(1)@jpeg",
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [
            Object {
              "cid": "cids(3)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "did:example:labeler",
              "uri": "record(4)",
              "val": "test-label",
            },
          ],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "Reply",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(3)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": Object {
            "$type": "app.bsky.feed.defs#postView",
            "author": Object {
              "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": Array [],
              "viewer": Object {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "cid": "cids(4)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "likeCount": 0,
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(2)",
                  "uri": "record(3)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "Reply reply",
            },
            "replyCount": 0,
            "repostCount": 0,
            "uri": "record(5)",
            "viewer": Object {},
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread proxy views handles deleted posts correctly 2`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "$type": "app.bsky.feed.defs#postView",
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  "replies": Array [],
}
`;

exports[`pds thread proxy views handles deleted posts correctly 3`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.defs#notFoundPost",
    "notFound": true,
    "uri": "record(4)",
  },
  "post": Object {
    "$type": "app.bsky.feed.defs#postView",
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
      },
      "text": "Reply reply",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  "replies": Array [],
}
`;

exports[`pds thread proxy views includes the muted status of post authors. 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "$type": "app.bsky.feed.defs#postView",
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": true,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(3)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(2)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
      "replies": Array [],
    },
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(1)@jpeg",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [
            Object {
              "cid": "cids(4)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "did:example:labeler",
              "uri": "record(7)",
              "val": "test-label",
            },
          ],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(4)/cids(5)@jpeg",
              "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(4)/cids(5)@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(5)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(6)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": Object {
            "$type": "app.bsky.feed.defs#postView",
            "author": Object {
              "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": Array [],
              "viewer": Object {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": true,
              },
            },
            "cid": "cids(6)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "likeCount": 0,
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(3)",
                  "uri": "record(6)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "uri": "record(8)",
            "viewer": Object {
              "repost": "record(9)",
            },
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;
